Added more explanation

--- a/ShorsAlgorithm.ipynb
+++ b/ShorsAlgorithm.ipynb
@@ -10,13 +10,55 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba141842-24a8-4b1d-886a-60f58f3f5930",
+   "id": "09f3c311-3dc6-4440-b0d8-dcb1329f3749",
    "metadata": {},
    "source": [
+    "Shor's Algorithm is used to solve prime factorization using quantum computing.  \n",
     "This notebook will implement Shor's Algorithm to factor a given number $N$  \n",
     "Created by George Lake - December 2025\n",
     "\n",
-    "Consisting of :  \n",
+    "Note: This implementation of Shor's returns two nontrivial factors, for example $N = 45$, factors = $9 * 5$. These are not prime factors. To get prime factors from this point, you would run Shor's again on $N = 9$ . In a full implementation, this would be done as part of the algorithm.\n",
+    "\n",
+    "Shor's Algorithm can really be broken up into a few steps\n",
+    "* The order finding problem, solved with quantum phase estimation, giving the period $r$\n",
+    "* Classical computation factorization using $r$ into nontrivial factors.\n",
+    "\n",
+    "The following problems set us up:\n",
+    "\n",
+    "<div style=\"background-color: #f7f7f7; border: 1px solid #ccc; padding: 15px; border-radius: 5px; margin-bottom: 15px;\">\n",
+    "  <h4 style=\"margin-top:0;\">Order Finding</h4>\n",
+    "  <ul>\n",
+    "    <li><b>Input:</b> Positive integers $N$ and $a$ satisfying $\\text{gcd}(N,a) = 1$</li>\n",
+    "    <li><b>Output:</b> The smallest positive integer $r$ such that $a^r \\equiv 1 \\pmod{N}$</li>\n",
+    "  </ul>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color: #f7f7f7; border: 1px solid #ccc; padding: 15px; border-radius: 5px; margin-bottom: 15px;\">\n",
+    "  <h4 style=\"margin-top:0;\">Phase Estimation (Used to solve Order Finding via Quantum)</h4>\n",
+    "  <ul>\n",
+    "    <li><b>Input:</b> A unitary quantum circuit for an $n$-qubit operation $U$ along with an $n$-qubit quantum state $\\ket{\\psi}$.</li>\n",
+    "    <li><b>Promise:</b> $\\ket{\\psi}$ is an eigenvector of $U$.</li>\n",
+    "    <li><b>Output:</b> An approximation to the number $\\theta \\in [0,1)$ satisfying $$U\\ket{\\psi} = e^{2 \\pi i \\theta}\\ket{\\psi}$$</li>\n",
+    "  </ul>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color: #f7f7f7; border: 1px solid #ccc; padding: 15px; border-radius: 5px;\">\n",
+    "  <h4 style=\"margin-top:0;\">Classical Factor Extraction</h4>\n",
+    "  <ul>\n",
+    "    <li><b>Input:</b> Composite integer $N$ and an integer $a$ with $\\text{gcd}(N,a) = 1$, together with the order $r$ of $a \\pmod{N}$.</li>\n",
+    "    <li><b>Promise:</b> $r$ is even and $a^{r/2} \\not\\equiv -1 \\pmod{N}$</li>\n",
+    "    <li><b>Output:</b> A nontrivial factor of $N$</li>\n",
+    "  </ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba141842-24a8-4b1d-886a-60f58f3f5930",
+   "metadata": {},
+   "source": [
+    "The problem will be setup and solved as follows:  \n",
+    "\n",
     "- 1: Imports and Configuration  \n",
     "        Imports, Define target, calculate qubits  \n",
     "- 2: Classical Pre-Checks  \n",
